css/custom.css
body {
	line-height: 1.5;
	font-family: 'Open Sans', sans-serif;
    overflow-x: hidden;
	text-align: center;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
.section-padding
{
	padding: 10px 0px;
}

/**media Queries**/
.navbar-default {
    background-color: transparent;
}
.main-header
{
	background: url(../img/banner.jpeg) no-repeat;
	background-size: cover;
	min-height: 610px;
}
.bg-color
{
	background-color: RGBA(0, 0, 0, 0.41);
}

.nav > li > a {
    padding: 0px;
}
.navbar-brand
{
	padding: 0px;
	height: inherit;
	font-family: 'Lato', sans-serif;
}

.navbar-default .navbar-brand {
  color: #fff;
	font-size: 34px;
	text-transform: uppercase;
	font-weight: 700;
	letter-spacing: 2px;
}
.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
    color: #FFD34E;
    background-color: transparent;
    text-transform: uppercase;
}
.navbar-default .navbar-nav > li > a {
    color: #fff;
    padding: 0px 20px;
    text-transform: uppercase;
}
.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus
{
	color: #FFD34E;
}

.navbar-fixed-top {
    padding: 40px 0px 0px 0px;
    transition: all 0.5s;
}

.top-nav-collapse {
    background: rgba(0,0,0,0.8);
}


.wrapper
{
	padding: 90px 0px 130px;
}

.sub-title
{
	font-size: 50px;
	font-weight: 700;
	color: #fff;
	line-height: 71px;
	letter-spacing: 4px;
	opacity: 1;
	text-transform: uppercase;
}
.title
{
	font-size: 123px;
	font-weight: 700;
	color: #fff;
	line-height: 180px;
	letter-spacing: 4px;
	opacity: 1;
	text-transform: uppercase;
	padding: 25px 0px;
}

button {
  -webkit-border-radius: 5;
  -moz-border-radius: 5;
  border-radius: 5px;
  font-family: Arial;
  color: white;
  font-size: 20px;
  background: black;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
}

.btn-submit
{
    background: #FFD34E;
    border: 0px;
    display: inline-block;
    font-size: 16px;
    text-transform: uppercase;
    padding: 10px 40px;
    font-weight: normal;
    border-radius: 0px;
    letter-spacing: 1px;
    color: #333;
    position: relative;
    overflow: hidden;
    -webkit-transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
    margin-top: 25px;
    border: 2px solid  #FFD34E;
}

.btn-submit:hover {
    background: #fff;
}
/****/
#cta-1
{
	padding: 40px 0px;
}
.cta-info
{
	border: 5px solid lightblue;
	padding: 20px 0px;
}
.cta-info h3
{
	font-size: 24px;
}
.dec-tec
{
	font-size: 34px;
}
/****/
#feature
{
	background-color: #f8f8f8;
}
.head-title
{
	color: #2b2b2b;
	font-size: 32px;
	font-weight: 700;
}
.botm-line
{
	background-color: #2b2b2b;
	width: 34px;
	height: 3px;
	display: inline-block;
}
.section-title:hover .botm-line
{
	width: 70px;
	/* For Safari 3.1 to 6.0 */
    -webkit-transition-property: width;
    -webkit-transition-duration: 2s;
    -webkit-transition-timing-function: linear;
    -webkit-transition-delay: 1s;
    /* Standard syntax */
    transition-property: width;
    transition-duration: 2s;
    transition-timing-function: linear;
    transition-delay: 1s;
}
p {
	color: black;
	font-size: 20px;
	text-align: justify;
	line-height: 35px;
}

li {
	margin-bottom: 20px;
}

.icon {
    position: relative;
    height: 48px;
    width: 48px;
    float: left;
    margin-top: 14px;
    margin-bottom: 20px;
}
.icon i
{
	font-size: 35px;
}
.icon-text {
    margin-left: 73px;
    padding:0px 25px 25px 0px;
}
h3.txt-tl {
    font-size: 24px;
    line-height: 1.35;
}
/****/
.parallax {
    background-attachment: fixed;
    background-repeat: repeat-y;
    background-position: center center;
}

.section {
    position: relative;
    padding: 88px 0 67px 0;
    display: block;
}
.cta-txt h3 {

    font-size: 32px;
    margin-bottom: 10px;
    font-weight: 700;
    color: #fff;
}
.cta-txt p
{
	color: #fff;
}
/****/
.portfolio-box
{
	margin-bottom: 15px;
}
.padding-right-zero
{
	padding-right: 0px;
}
#contact
{
	background-color: #f8f8f8;
}

.validation {
    color: red;
    display:none;
    margin: 0 0 20px;
    font-weight:400;
    font-size:13px;
}

#sendmessage {
    color: green;
    border:1px solid green;
    display:none;
    text-align:center;
    padding:15px;
    font-weight:600;
    margin-bottom:15px;
}

#errormessage {
    color: red;
    display:none;
    border:1px solid red;
    text-align:center;
    padding:15px;
    font-weight:600;
    margin-bottom:15px;
}

#sendmessage.show, #errormessage.show, .show {
	display:block;
}

.container {
	margin-bottom: 40px;
}

.container p {
	margin-left: 3em;
	margin-right: 6em;
}

#intro {
	margin-left: 22em;
	margin-right: 25em;
}

.black
{
	color: #000 !important;
	font-weight: 600;
}
.btn-send
{
	border-radius: 4px;
	color: #000;
	background-color: #FF4040;
}
a, a:hover
{
	color: #FFD34E;
}
.cont-title
{
	font-size: 24px;
	padding:15px 0px;
}
.location-info p span {
    display: inline-block;
}
.location-info p span {
    width: 40px;
    font-size: 24px;
    color: black;
}

.location-info p {
    margin-bottom: 5px;
    font-size: 18px;
    line-height: 32px;
    color: black;
		margin-left: 0em;
}
.contact-icon-container {
    position: absolute;
    top: -38px;
    right: 0;
    padding-right: 20px;
    font-size: 320px;
    color: #555;
    line-height: 300px;
    -ms-transform: rotate(20deg);
    -moz-transform: rotate(20deg);
    -webkit-transform: rotate(20deg);
    transform: rotate(20deg);
}
/****/
#footer
{
	background-color: #191919;
	padding: 60px 0px;
}

.footer-social {
	text-align: center;
}
.footer-social a {
    font-size: 50px;
    color: white;
		letter-spacing: 15px;
}

.footer-social a:hover {
	color: #FF4040;
}

/*.link-dec, .link-dec:hover{
    color: red;
		text-decoration: none;
}*/

.link-dec:link {
	color:red;
	text-decoration: none;
}

.link-dec:visited {
	color:red;
	text-decoration: none;
}

.link-dec:hover {
	color:red;
	text-decoration: none;
}

.link-dec:active {
	color:red;
	text-decoration: none;
}

.portrait {
	text-align: center;
	padding: 0px 0px 0px 0px;
}

hr {
	border-top: 1px solid #8c8b8b;
	width: 90%;
}

h1, h2, h3, h4, h5, h6 {
	color: black;
}

#lightbox .modal-content {
    display: inline-block;
    text-align: center;
}

#lightbox .close {
    opacity: 1;
    color: rgb(255, 255, 255);
    background-color: rgb(25, 25, 25);
    padding: 5px 8px;
    border-radius: 30px;
    border: 2px solid rgb(255, 255, 255);
    position: absolute;
    top: -15px;
    right: -55px;

    z-index:1032;
}

table {
	line-height: 25px;
	text-align: left;
	color: black;
}

th {
	background-color: black;
	color: white;
}

th, td {
	padding: 8px;
}

tr:hover {
	background-color: lightgrey;
}

/****/
@media (min-width: 451px) and (max-width: 1100px) {
    .section-title {
        margin-bottom: 15px;
    }

		.navbar-default .navbar-brand {
			font-size: 24px;
		}

		.navbar-toggle {
			margin-top: 0px;
		}

		.container p {
			margin-left: 1em;
			margin-right: 3em;
		}

		#intro {
			margin-left: 3em;
			margin-right: 6em;
		}

}
@media (min-width: 20px) and (max-width: 450px) {
		.navbar-default .navbar-brand {
			font-size: 18px;
		}

    .navbar-toggle:hover, .navbar-toggle {
        background-color: #fff;
        color: #000;
    }
    .navbar-toggle {
        margin-top: 0px;
    }

    .navbar-default .navbar-nav > li > a {
        text-align: center;
        background-color: rgba(255, 255, 255, 0.32);
        color: #000;
    }
    .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
        background-color: rgba(255, 255, 255, 0.32);
        color: #FF4040;
    }
    .top-title {
        font-size: 15px;
    }
    .title {
        font-size: 50px;
				margin-top: 70px;
    }
    .sub-title {
        font-size: 24px;
    }
    .footer-copyright {
    text-align: center;
    }
    .padding-right-zero {
        padding-right: 15px;
    }
    .section-title {
        margin-bottom: 15px;
    }
    .cta-txt h3 {
        font-size: 28px;
    }
    body {
        font-size: 14px;
    }
    h3.txt-tl {
        font-size: 20px;
    }

		.container p {
			margin-left: 0em;
			margin-right: 2.5em;
		}

		#intro {
			margin-left: 0em;
			margin-right: 2.5em;
		}

		p {
			text-align: justify;
			font-size: 16px;
			text-justify: newspaper;
			word-spacing: -2px;
		}

}
/****/

